{
    "name": "DefaultInput",
    "maps": [
        {
            "name": "Character",
            "id": "798c5ea1-7d3d-4dfa-97fa-f33f1e7f493d",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "21f1a04f-93cd-468c-a25b-fbfa13285014",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "View",
                    "type": "PassThrough",
                    "id": "4e1564d4-f535-48f1-a409-7be2ba03291e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "7dc3d17e-92cc-4f14-8c54-eda1778cb4d6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crounh",
                    "type": "Button",
                    "id": "70815c4e-04cf-4bd8-94cf-ce0e5eef81e1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Proun",
                    "type": "PassThrough",
                    "id": "1eb3a844-c392-4370-9b31-bdef78c72397",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "45622661-f769-4a25-8a06-107d40f3face",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SprintReliease",
                    "type": "Button",
                    "id": "f3d5bde1-4290-465b-ba4b-ef89029078c0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeanLeftPressed",
                    "type": "Button",
                    "id": "14e2e7ea-49e4-4770-910b-615a9d41a2e8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeanRightPressed",
                    "type": "Button",
                    "id": "22509081-0e14-4618-a566-15682505bcbd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeanLeftRelised",
                    "type": "Button",
                    "id": "c867bf42-4203-4a47-8210-09d2c82171ca",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeanRightRelised",
                    "type": "Button",
                    "id": "285d8f14-a662-49f4-a96e-b1db4567e474",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a7043569-780d-44ca-9756-feb9abf6a09f",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "View",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "690222b1-5e02-449c-9f01-d6dbd8793137",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f367f1eb-3e95-48a9-8ce3-a0835a48ff19",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2f401c14-4d75-4170-ab30-3190b3ec522d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6e5d7dc4-d91a-47da-bebc-0a563c0f61e9",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f0a86284-3e32-4bfe-916d-46c9550444af",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "781b2343-c871-4c3b-94ca-73a813b2affc",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e3d2c09a-d3c9-40ff-b45e-44d3e4cb95a4",
                    "path": "<Keyboard>/c",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Crounh",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "620dd0eb-9c6a-426d-b2fd-83bc348c6e9d",
                    "path": "<Keyboard>/x",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Proun",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc7cb293-0207-42a6-8350-94f1c067155d",
                    "path": "<Keyboard>/c",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Proun",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3e785e96-5af8-45eb-952b-525f7bd3c448",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f4e73b78-2bbc-4c34-a1c5-8ab922bfcc12",
                    "path": "<Keyboard>/shift",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "SprintReliease",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3563f934-edec-4c73-a203-b94d9b509351",
                    "path": "<Keyboard>/q",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "LeanLeftPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9f5a8048-4114-48f1-a7d0-3813a9d517a7",
                    "path": "<Keyboard>/e",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "LeanRightPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f83cc578-e711-4d3f-a0a8-20b6c48d288e",
                    "path": "<Keyboard>/q",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "LeanLeftRelised",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "922f49ba-430a-4343-ae48-0873d5edfcbf",
                    "path": "<Keyboard>/e",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "LeanRightRelised",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Wepon",
            "id": "f79c4d52-ac05-42fc-a807-6cf253d1d39c",
            "actions": [
                {
                    "name": "Fire2Pressed",
                    "type": "Button",
                    "id": "6780e668-ba17-4474-854c-a443c25543b0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire2Relised",
                    "type": "Button",
                    "id": "e9c63c06-e73e-4380-a286-890fe4fb60b1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire1Pressed",
                    "type": "Button",
                    "id": "566192c9-c24b-4838-8758-d135ba78c7a6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire1Relised",
                    "type": "Button",
                    "id": "08378f94-413c-4c33-97ea-6c6c282c4700",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6480df4d-7a1a-4a38-8c3e-f2c6e07c13f1",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Fire2Pressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d1fb1e3-676e-4e7e-a168-a54354453f7d",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Fire2Relised",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc4f88d3-28a5-4b23-ba0a-6c583c46753e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Fire1Pressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "de560b5c-a00b-4e61-a04a-9717ab9275aa",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Fire1Relised",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}